# stock-data-pipeline

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/: alembic.ini  main.py  model.py
src/crawler/: Dockerfile  main.py  requirements.txt
src/crawler/scraping/: get_broker_trade_daily.py  get_stock_data.py  get_stock_share_distribution.py  update_stock_list.py
src/crawler/utils/: ocr_helper.py  selenuim_helper.py
src/dashboard/: Dockerfile  main.py  requirements.txt  service.py
src/dashboard/pages/broker_trade_daily/: stock_infomation.py  watchlist_edition.py
src/dashboard/pages/share_distribution/: stock_infomation.py
src/dashboard/utils/: streamlit_helper.py
src/database/: db_helper.py  model.py
src/database/migrate/: env.py
src/database/migrate/versions/: 2bce83dc4821_add_broker_trade_daily_and_watchlist_.py  e0aafc8e3ac1_init.py  f71aee9282b2_rename_stock_list_table_to_stocks.py
src/database/repository/: broker_trade_dialy_repository.py  stock_list_repository.py  stock_share_distribution_repository.py
src/migrate/: env.py
src/migrate/versions/: 470f66a00c3a_init.py  61d64d7c076d_change_column_type_to_not_nullable.py  85eedb45eecb_init_stock_table.py  bce29b8c7164_init.py  e0aafc8e3ac1_init.py  f71aee9282b2_rename_stock_list_table_to_stocks.py
src/repository/: stock_list_repository.py  stock_share_distribution_repository.py
src/scraping/: get_stock_data.py  update_stock_list.py
src/utils/: db_helper.py  selenuim_helper.py  set_last_updated.py  sqlite_to_postgresql.py
