[project]
name = "stock-data-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "ErEr",email = "jeffliao92316046@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "alembic (>=1.14.0,<2.0.0)",
    "sqlalchemy (>2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "sqlalchemy-utils (>=0.41.2,<0.42.0)",
    "twstock (>=1.4.0,<2.0.0)",
    "sqlmodel (>=0.0.22,<0.0.23)",
]

[project.optional-dependencies]
dev = [
    "black (>=24.10.0,<25.0.0)"
]

dashboard = [
    "streamlit (>=1.42.0,<2.0.0)",
]

crawler = [
    "selenium (>=4.27.1,<5.0.0)",
    "lxml (>=5.3.0,<6.0.0)",
    "prefect (>=3.1.13,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false